--- a/app/javascript/ui/css/_header.scss
+++ b/app/javascript/ui/css/_header.scss
@@ -1,6 +1,7 @@
 .mainToolbar {
   flex-direction: column;
   position: relative;
+  min-width: $min-page-width;
   > * {
     margin: 0;
     padding-left: 5%;
@@ -11,6 +12,8 @@
     display: flex;
     height: 48px;
     align-items: center;
+    min-width: $min-page-width;
+    
     .sections {
       flex-grow: 1;
     }
@@ -40,6 +43,7 @@
     padding: 0;
     bottom: -28px;
     right: 5%;
+    z-index: 1;
     &.md-btn--floating {
       height: 56px;
       width: 56px;
