--- a/app/javascript/ui/css/_variables-overrides.scss
+++ b/app/javascript/ui/css/_variables-overrides.scss
@@ -1,3 +1,5 @@
 
 $md-primary-color: $md-grey-800;
 $md-secondary-color: $md-cyan-500;
+
+$min-page-width: 1160px;
